--- a/docs/index.asciidoc
+++ b/docs/index.asciidoc
@@ -267,21 +267,15 @@ fields => {
 
 List of elasticsearch hosts to use for querying.
 
-**Examples**
-```
-Add examples here
-```
+This option can accept an environment variable containing one or more hostnames separated by whitespace.
+Strings separated by whitespace are treated as separate entries.
 
-{ls} 7.9 and later supports defining an environment variable `hosts =>
-'${ES_HOSTS}' with multiple whitespace delimited URIs. 
-This plugin automatically expands `hosts` strings that contain multiple
-white-space delimited URs into separate entries. 
+*Examples:*
 
-**Example**
-```
-ES_HOSTS="es1.example.com es2.example.com:9201 es3.example.com:9201"
-```
-
+* `ES_HOSTS="es1.example.com es2.example.com:9201 es3.example.com:9201"`
+* `ES_HOSTS="127.0.0.1:9200 127.0.0.2:9200"`
+* `ES_HOSTS="http://127.0.0.1 http://127.0.0.2"`
+* `ES_HOSTS="https://127.0.0.1:9200/mypath https://127.0.0.2:9200/mypath"`
 
 [id="plugins-{type}s-{plugin}-index"]
 ===== `index` 
