--- a/docs/index.asciidoc
+++ b/docs/index.asciidoc
@@ -143,7 +143,7 @@ This plugin supports the following configuration options plus the <<plugins-{typ
 | <<plugins-{type}s-{plugin}-query_template>> |<<string,string>>|No
 | <<plugins-{type}s-{plugin}-result_size>> |<<number,number>>|No
 | <<plugins-{type}s-{plugin}-retry_on_failure>> |<<number,number>>|No
-| <<plugins-{type}s-{plugin}-retry_on_status>> |<<number,number>>|No
+| <<plugins-{type}s-{plugin}-retry_on_status>> |<<number,number>> list|No
 | <<plugins-{type}s-{plugin}-sort>> |<<string,string>>|No
 | <<plugins-{type}s-{plugin}-ssl>> |<<boolean,boolean>>|No
 | <<plugins-{type}s-{plugin}-keystore>> |a valid filesystem path|No
@@ -350,7 +350,7 @@ When enabled, retry requests that result in connection errors or an HTTP status 
 [id="plugins-{type}s-{plugin}-retry_on_status"]
 ===== `retry_on_status`
 
-* Value type is <<number,number list>>
+* Value type is <<number,number>> list
 * Default value is an empty list `[]`
 
 Which HTTP Status codes to consider for retries (in addition to connection errors) when using <<plugins-{type}s-{plugin}-retry_on_failure>>,
