--- a/docs/index.asciidoc
+++ b/docs/index.asciidoc
@@ -124,11 +124,11 @@ The `monitoring` permission at cluster level is necessary to perform periodic co
 
 To use {esql}, this plugin needs to be installed in {ls} 8.17.4 or newer, and must be connected to {es} 8.11 or newer.
 
-To configure ES|QL query in the plugin, set your ES|QL query in the `query` parameter.
+To configure {esql} query in the plugin, set your {esql} query in the `query` parameter.
 
-IMPORTANT: We recommend understanding https://www.elastic.co/guide/en/elasticsearch/reference/current/esql-limitations.html[ES|QL current limitations] before using it in production environments.
+IMPORTANT: We recommend understanding {ref}/esql-limitations.html[{esql} current limitations] before using it in production environments.
 
-The following is a basic ES|QL query that sets food name to transaction event based on upstream event's food ID:
+The following is a basic {esql} query that sets the food name to transaction event based on upstream event's food ID:
 [source, ruby]
     filter {
       elasticsearch {
@@ -139,7 +139,7 @@ The following is a basic ES|QL query that sets food name to transaction event ba
             | WHERE id = "?food_id"
         '
         query_params => {
-          named_params => ["food_id" => "[food][id]"]
+          "food_id" => "[food][id]"
         }
         fields => { "food.name" => "food_name" }
       }
@@ -147,11 +147,11 @@ The following is a basic ES|QL query that sets food name to transaction event ba
 
 Set `config.support_escapes: true` in `logstash.yml` if you need to escape special chars in the query.
 
-In the result event, the plugin sets total result size in `[@metadata][total_hits]` field. It also limits the result size to 1 when `FROM` query is used.
+In the result event, the plugin sets total result size in `[@metadata][total_values]` field. It also limits the result size to 1 when `FROM` query is used.
 
-NOTE: If `FROM` execution command used and not `LIMIT` is set, the plugin attaches `| LIMIT 1`.
+NOTE: If `LIMIT` isn't set, the plugin attaches `| LIMIT 1`.
 
-For comprehensive ES|QL syntax reference and best practices, see the https://www.elastic.co/guide/en/elasticsearch/reference/current/esql-syntax.html[{es} ES|QL documentation].
+For comprehensive ES|QL syntax reference and best practices, see the https://www.elastic.co/guide/en/elasticsearch/reference/current/esql-syntax.html[{esql} documentation].
 
 [id="plugins-{type}s-{plugin}-options"]
 ==== Elasticsearch Filter Configuration Options
@@ -178,6 +178,7 @@ NOTE: As of version `4.0.0` of this plugin, a number of previously deprecated se
 | <<plugins-{type}s-{plugin}-password>> |<<password,password>>|No
 | <<plugins-{type}s-{plugin}-proxy>> |<<uri,uri>>|No
 | <<plugins-{type}s-{plugin}-query>> |<<string,string>>|No
+| <<plugins-{type}s-{plugin}-query_type>> |<<string,string>>, one of `["dsl", "esql"]`|No
 | <<plugins-{type}s-{plugin}-query_params>> |<<hash,hash>>|No
 | <<plugins-{type}s-{plugin}-query_template>> |<<string,string>>|No
 | <<plugins-{type}s-{plugin}-result_size>> |<<number,number>>|No
@@ -376,22 +377,29 @@ environment variables e.g. `proxy => '${LS_PROXY:}'`.
   * There is no default value for this setting.
 
 The query to be executed.
-Accepted query shape is DSL query string or ES|QL.
+The accepted query shape is DSL query string or ES|QL.
 For the DSL query string, use either `query` or `query_template`.
 Read the {ref}/query-dsl-query-string-query.html[{es} query
 string documentation] or {ref}/esql.html[{es} ES|QL documentation] for more information.
 
+[id="plugins-{type}s-{plugin}-query_type"]
+===== `query_type`
+
+* Value can be `dsl` or `esql`
+* Default value is `dsl`
+
+Defines the <<plugins-{type}s-{plugin}-query>> shape.
+When `dsl`, the query shape must be valid {es} JSON-style string.
+When `esql`, the query shape must be a valid {esql} string and `index`, `query_template` and `sort` parameters are not allowed.
+
 [id="plugins-{type}s-{plugin}-query_params"]
 ===== `query_params`
-Parameters to send to {es} together with <<plugins-{type}s-{plugin}-query>>.
 
-Accepted options:
-[cols="2,1,3",options="header"]
-|===
-|Option name |Default value | Description
+* The value type is <<hash,hash>>
+* There is no default value for this setting
 
-|`named_params` |[] | List of named parameters and their matches used in the `query`
-|===
+Named parameters in {esql} to send to {es} together with <<plugins-{type}s-{plugin}-query>>.
+Visit {ref}/esql-rest.html#esql-rest-params[passing parameters to query page] for more information.
 
 [id="plugins-{type}s-{plugin}-query_template"]
 ===== `query_template` 
